@@ -5,29 +5,24 @@ import com.app.brainmap.domain.dto.DomainExpert.*;
 import com.app.brainmap.domain.entities.DomainExpert.*;
 import com.app.brainmap.domain.entities.User;
 import com.app.brainmap.mappers.BookingMapper;
-import com.app.brainmap.mappers.ServiceListingResponseMapper;
 import com.app.brainmap.repositories.*;
 import com.app.brainmap.services.DomainExpertsService;
 import com.app.brainmap.services.FileStorageService;
 import com.app.brainmap.services.NotificationService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class DomainExpertsServiceImpl implements DomainExpertsService {
     private final DomainExpertRepository domainExpertRepository;
     private final UserRepository userRepository;
@@ -35,10 +30,12 @@ public class DomainExpertsServiceImpl implements DomainExpertsService {
     private final DomainExpertEducationRepository domainExpertEducationRepository;
     private final DomainExpertVerificationDocumentRepository domainExpertVerificationDocumentRepository;
     private final FileStorageService fileStorageService;
-    private final ServiceBookingRepository serviceBookingRepository;
+
+    // new dependencies used for public profile
     private final ServiceListingRepository serviceListingRepository;
-    private final BookingMapper bookingMapper;
-    private final NotificationService notificationService;
+    private final com.app.brainmap.mappers.ServiceListingResponseMapper serviceListingResponseMapper;
+    private final ReviewRepository reviewRepository;
+    private final ServiceBookingRepository serviceBookingRepository;
 
     @Override
     public List<DomainExperts> listDomainExperts() {
@@ -50,15 +47,48 @@ public class DomainExpertsServiceImpl implements DomainExpertsService {
         DomainExperts expert = domainExpertRepository.findById(id).orElseThrow(() -> new RuntimeException("Expert not found"));
         User user = expert.getUser();
 
-        return DomainExpertProfileDto.builder()
+        DomainExpertProfileDto dto = DomainExpertProfileDto.builder()
                 .id(expert.getId().toString())
                 .firstName(user.getFirstName())
                 .lastName(user.getLastName())
                 .username(user.getUsername())
                 .createdAt(user.getCreatedAt())
                 .updatedAt(user.getUpdatedAt())
-//                .status(expert.getStatus().toString())
+                .email(user.getEmail())
+                .phone(user.getMobileNumber())
+                .dateOfBirth(user.getDateOfBirth() != null ? user.getDateOfBirth().toString() : null)
+                .location(user.getCity() != null ? user.getCity() : expert.getLocation())
+                .gender(user.getGender())
+                .bio(user.getBio())
+                .workExperience(expert.getWorkExperience())
+                .linkedinProfile(expert.getLinkedinProfile())
+                .portfolio(expert.getPortfolio())
+                .profilePhotoUrl(expert.getProfilePhotoUrl())
                 .build();
+
+        // expertise areas
+        dto.setExpertiseAreas(expert.getExpertiseAreas().stream()
+                .map(a -> ExpertiseAreaDto.builder().expertise(a.getExpertise()).experience(a.getExperience()).build())
+                .collect(Collectors.toList()));
+
+        // education
+        dto.setEducation(expert.getEducations().stream()
+                .map(e -> EducationDto.builder().degree(e.getDegree()).school(e.getSchool()).year(e.getYear()).build())
+                .collect(Collectors.toList()));
+
+        // verification documents
+        dto.setVerificationDocs(expert.getVerificationDocuments().stream()
+                .map(d -> VerificationDocumentDto.builder()
+                        .id(d.getId())
+                        .fileName(d.getFileName())
+                        .fileUrl(d.getFileUrl())
+                        .contentType(d.getContentType())
+                        .size(d.getSize())
+                        .status(d.getStatus())
+                        .uploadedAt(d.getUploadedAt())
+                        .build())
+                .collect(Collectors.toList()));
+
     }
 
     @Override
@@ -81,19 +111,9 @@ public class DomainExpertsServiceImpl implements DomainExpertsService {
         }
         if (profileDto.getLocation() != null) user.setCity(profileDto.getLocation());
 
-        // Update expert extended fields
-        expert.setMentorshipType(profileDto.getMentorshipType());
-        expert.setAvailability(profileDto.getAvailability());
-        if (profileDto.getHourlyRate() != null) {
-            try { expert.setHourlyRate(new BigDecimal(profileDto.getHourlyRate())); } catch (NumberFormatException ex) { log.warn("Hourly rate parse error: {}", ex.getMessage()); }
-        }
-        if (profileDto.getMaxMentees() != null) {
-            try { expert.setMaxMentees(Integer.parseInt(profileDto.getMaxMentees())); } catch (NumberFormatException ex) { log.warn("Max mentees parse error: {}", ex.getMessage()); }
-        }
         expert.setWorkExperience(profileDto.getWorkExperience());
         expert.setLinkedinProfile(profileDto.getLinkedinProfile());
         expert.setPortfolio(profileDto.getPortfolio());
-        expert.setAddress(profileDto.getAddress());
         expert.setLocation(profileDto.getLocation());
         expert.setStatus(DomainExpertStatus.PENDING);
 
@@ -169,6 +189,13 @@ public class DomainExpertsServiceImpl implements DomainExpertsService {
     }
 
     @Override
+    @Transactional
+    public UUID updateDomainExpertProfile(UUID id, CompleteDomainExpertProfileDto profileDto) {
+        // reuse the same behavior as completeDomainExpertProfile for now (updates same fields)
+        return completeDomainExpertProfile(id, profileDto);
+    }
+
+    @Override
     public Boolean isProfileComplete(UUID userId) {
         return domainExpertRepository.findById(userId)
                 .map(expert -> expert.getStatus() == DomainExpertStatus.VERIFIED || expert.getStatus() == DomainExpertStatus.PENDING)
@@ -180,133 +207,60 @@ public class DomainExpertsServiceImpl implements DomainExpertsService {
     */
 
     @Override
-    public ServiceBookingResponseDto createServiceBooking(ServiceBookingRequestDto requestDto, UUID userId) {
-        ServiceListing service = serviceListingRepository.findById(requestDto.getServiceId())
-                .orElseThrow(() -> new RuntimeException("Service not found"));
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-        DomainExperts expert = domainExpertRepository.findById(requestDto.getDomainExpertId())
-                .orElseThrow(() -> new RuntimeException("Domain expert not found"));
+    @Transactional(readOnly = true)
+    public DomainExpertDto getDomainExpertPublicProfile(UUID userId) {
+        DomainExperts expert = domainExpertRepository.findById(userId).orElseThrow(() -> new RuntimeException("Domain expert not found"));
+        User user = expert.getUser();
 
-        ServiceBooking booking = ServiceBooking.builder()
-                .service(service)
-                .user(user)
-                .domainExpert(expert)
-                .duration(requestDto.getDuration())
-                .projectDetails(requestDto.getProjectDetails())
-                .requestedDate(requestDto.getRequestedDate())
-                .requestedStartTime(requestDto.getRequestedStartTime())
-                .requestedEndTime(requestDto.getRequestedEndTime())
-                .totalPrice(requestDto.getTotalPrice())
-                .status(ServiceBookingStatus.PENDING)
-                .createdAt(java.time.LocalDateTime.now())
-                .updatedAt(java.time.LocalDateTime.now())
-                .sessionType(SessionType.valueOf(requestDto.getSessionType().toUpperCase()))
+        // Basic fields
+        DomainExpertDto dto = DomainExpertDto.builder()
+                .id(expert.getId().toString())
+                .firstName(user.getFirstName())
+                .lastName(user.getLastName())
+                .username(user.getUsername())
+                .avatar(user.getAvatar())
+                .profilePhotoUrl(expert.getProfilePhotoUrl())
+                .status(expert.getStatus() != null ? expert.getStatus().toString() : null)
+                .domain(expert.getDomain())
+                .bio(user.getBio())
+                .workExperience(expert.getWorkExperience())
+                .linkedinProfile(expert.getLinkedinProfile())
+                .portfolio(expert.getPortfolio())
+                .location(user.getCity() != null ? user.getCity() : expert.getLocation())
+                .createdAt(user.getCreatedAt())
                 .build();
-        booking = serviceBookingRepository.save(booking);
-        return bookingMapper.toBookingResponseDto(booking);
-    }
 
-    @Override
-    @Transactional
-    public ServiceBookingResponseDto reviewServiceBooking(UUID bookingId, boolean accept, ServiceBookingRequestDto adjustmentDto, String rejectionReason, UUID expertId) {
-        ServiceBooking booking = serviceBookingRepository.findById(bookingId)
-                .orElseThrow(() -> new RuntimeException("Booking not found"));
-        // Only the expert who owns the service can review
-        if (!booking.getService().getMentor().getId().equals(expertId)) {
-            throw new RuntimeException("Not authorized to review this booking");
-        }
-        if (accept) {
-            booking.setStatus(ServiceBookingStatus.ACCEPTED);
-            if (adjustmentDto != null) {
-                booking.setAcceptedDate(adjustmentDto.getRequestedDate() != null ? adjustmentDto.getRequestedDate() : booking.getRequestedDate());
-                booking.setAcceptedTime(adjustmentDto.getRequestedStartTime() != null ? adjustmentDto.getRequestedStartTime() : booking.getRequestedStartTime());
-                booking.setAcceptedTime(adjustmentDto.getRequestedEndTime() != null ? adjustmentDto.getRequestedEndTime() : booking.getRequestedEndTime());
-                booking.setAcceptedPrice(adjustmentDto.getTotalPrice() != null ? adjustmentDto.getTotalPrice() : booking.getTotalPrice());
-            } else {
-                booking.setAcceptedDate(booking.getRequestedDate());
-                booking.setAcceptedTime(booking.getAcceptedTime());
-                booking.setAcceptedPrice(booking.getTotalPrice());
-            }
-            booking.setReason(null);
-        } else {
-            booking.setStatus(ServiceBookingStatus.REJECTED);
-            booking.setReason(rejectionReason);
-        }
-        booking.setUpdatedAt(java.time.LocalDateTime.now());
-        booking = serviceBookingRepository.save(booking);
+        // expertise areas
+        dto.setExpertiseAreas(expert.getExpertiseAreas().stream()
+                .map(a -> ExpertiseAreaDto.builder().expertise(a.getExpertise()).experience(a.getExperience()).build())
+                .collect(Collectors.toList()));
 
-        // create notification to booking user about the review (accepted/rejected)
-        try {
-            String title = accept ? "Booking Accepted" : "Booking Rejected";
-            String serviceTitle = booking.getService() != null ? booking.getService().getTitle() : "your service";
-            String body;
-            if (accept) {
-                body = String.format("Your booking for '%s' has been accepted. Date: %s", serviceTitle,
-                        booking.getAcceptedDate() != null ? booking.getAcceptedDate().toString() : booking.getRequestedDate());
-            } else {
-                body = String.format("Your booking for '%s' was rejected. Reason: %s", serviceTitle,
-                        booking.getReason() != null ? booking.getReason() : "No reason provided");
-            }
-            notificationService.createNotification(booking.getUser().getId(), title, body, "BOOKING_STATUS", booking.getId().toString());
-        } catch (Exception ex) {
-            log.warn("Failed to create notification for booking {}: {}", bookingId, ex.getMessage());
-        }
+        // education
+        dto.setEducations(expert.getEducations().stream()
+                .map(e -> EducationDto.builder().degree(e.getDegree()).school(e.getSchool()).year(e.getYear()).build())
+                .collect(Collectors.toList()));
 
-        return bookingMapper.toBookingResponseDto(booking);
-    }
+        // services
+        List<ServiceListingResponseDto> services = serviceListingRepository.findByMentor_Id(user.getId()).stream()
+                .map(serviceListingResponseMapper::toServiceListingResponseDto)
+                .collect(Collectors.toList());
+        dto.setServices(services);
 
-    @Override
-    public List<ServiceBookingResponseDto> getBookingsForService(UUID serviceId) {
-        List<ServiceBooking> bookings = serviceBookingRepository.findByService_ServiceId(serviceId);
-        return bookings.stream().map(bookingMapper::toBookingResponseDto).toList();
-    }
+        // social links
+        dto.setSocialLinks(user.getSocialLinks().stream()
+                .map(sl -> com.app.brainmap.domain.dto.UserSocialLinkDto.builder().platform(sl.getPlatform()).url(sl.getUrl()).build())
+                .collect(Collectors.toList()));
 
-    @Override
-    public List<ServiceBookingResponseDto> getBookingsForUser(UUID userId) {
-        List<ServiceBooking> bookings = serviceBookingRepository.findByUserId(userId);
-        return bookings.stream().map(bookingMapper::toBookingResponseDto).toList();
-    }
+        // rating & reviews
+        Double avg = reviewRepository.findAverageRatingByMentorId(user.getId());
+        dto.setRating(avg != null ? avg : 0.0);
+        dto.setReviewsCount(reviewRepository.countByMentor_Id(user.getId()));
 
-    @Override
-    public List<ServiceBookingResponseDto> getBookingsForDomainExpert(UUID expertId) {
-        List<ServiceBooking> bookings = serviceBookingRepository.findByDomainExpert_Id(expertId);
-        return bookings.stream().map(bookingMapper::toBookingResponseDto).toList();
-    }
+        // completed bookings
+        long completed = serviceBookingRepository.countByDomainExpert_IdAndStatus(expert.getId(), ServiceBookingStatus.COMPLETED);
+        dto.setCompletedBookingsCount(completed);
 
-    @Override
-    public List<ServiceBookingResponseDto> getBookingsForDomainExpertFiltered(UUID expertId, String status, String date) {
-        List<ServiceBooking> bookings = serviceBookingRepository.findByDomainExpert_Id(expertId);
-        if (status != null && !status.isEmpty()) {
-            bookings = bookings.stream()
-                .filter(b -> b.getStatus() != null && b.getStatus().name().equalsIgnoreCase(status))
-                .toList();
-        }
-        if (date != null && !date.isEmpty()) {
-            bookings = bookings.stream()
-                .filter(b -> b.getRequestedDate() != null && b.getRequestedDate().toString().equals(date))
-                .toList();
-        }
-        return bookings.stream().map(bookingMapper::toBookingResponseDto).toList();
-    }
-
-    @Override
-    @Transactional
-    public ServiceBookingResponseDto updateServiceBooking(UUID bookingId, BookingUpdateDto updateDto, UUID userId) {
-        ServiceBooking booking = serviceBookingRepository.findById(bookingId)
-                .orElseThrow(() -> new RuntimeException("Booking not found"));
-        if (!booking.getUser().getId().equals(userId)) {
-            throw new RuntimeException("Not authorized to update this booking");
-        }
-        if (updateDto.getUpdatedDate() != null) booking.setUpdatedDate(updateDto.getUpdatedDate());
-        if (updateDto.getUpdatedStartTime() != null) booking.setUpdatedStartTime(updateDto.getUpdatedStartTime());
-        if (updateDto.getUpdatedEndTime() != null) booking.setUpdatedEndTime(updateDto.getUpdatedEndTime());
-        if (updateDto.getUpdatedPrice() != null) booking.setUpdatedPrice(updateDto.getUpdatedPrice());
-        if (updateDto.getReason() != null) booking.setReason(updateDto.getReason());
-        booking.setStatus(ServiceBookingStatus.UPDATED);
-        booking.setUpdatedAt(java.time.LocalDateTime.now());
-        booking = serviceBookingRepository.save(booking);
-        return bookingMapper.toBookingResponseDto(booking);
+        return dto;
     }
 
 }
